# digiforests

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: data_split.json
docker/: Dockerfile  README.md  compose.yaml
scripts/calibration/: extracting_pairs_from_dataset.md  helper_functions.py  image_lidar_overlay.ipynb
scripts/data/: README.md  aggregate_clouds_and_labels.py  dataloader.py  extract_images.py  split_dataset.py
scripts/dbh_estimation/: README.md  fit_cylinders_for_dbh.py
scripts/forest_pan_seg/: README.md  inference.py  test.py  train.py
src/digiforests_dataloader/: __init__.py
src/digiforests_dataloader/data_module/: base_data_module.py  digiforests.py
src/digiforests_dataloader/dataset/: base_dataset.py  digiforests.py
src/digiforests_dataloader/transforms/: README.md  __init__.py  add_offsets.py  center_global.py  random_reflection.py  random_rotate.py  random_translate_global.py  random_uniform_scale.py
src/digiforests_dataloader/utils/: cloud.py  io.py  logging.py  math.py  render.py  serialize.py
src/forest_pan_seg/: __init__.py  minkowski_unet_panoptic.py  minkunet.py  mlp.py  offset_loss.py  utils.py
src/forest_pan_seg/metrics/: __init__.py  classwise.py  panoptic_quality_functional.py  panoptic_quality_metric.py  panoptic_stat_score.py
src/tree_dbh_estimation/: __init__.py  cylinder.py  estimate_dbh.py  fit_cylinders.py  least_squares.py  proj_and_cluster.py  ransac.py  utils.py
src/tree_dbh_estimation/preprocess/: __init__.py  clip_z.py  ground_segmentation.py  height_normalization.py
tests/: test_imports.py
